# GEP

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.arch  LICENSE  LICENSE.md  README.md  docker-compose.yml  gdbinit-gep  gdbinit-gep.py  geprc.py  install.sh  lint.sh  poetry.toml  pyproject.toml  setup.cfg  tests.sh
.github/workflows/: build.yml  lint.yml  tests.yml
example/: gdbinit-gep  geprc.py
tests/: conftest.py  test_autosuggestion.py  test_commands_history.py  test_fzf_breakpoint.py  test_fzf_history.py  test_fzf_tab_completion.py  test_gep.py
tests/fixtures/: Makefile  test_program.c  test_program_cpp.cc
