[project]
name = "GEP"
version = "2025.01.10"
description = "GDB Enhanced Prompt"
readme = "README.md"
authors = [
    {name = "Alan Li", email = "61896187+lebr0nli@users.noreply.github.com"},
]
requires-python = "<4.0,>=3.8"
dependencies = [
    "prompt-toolkit==3.0.46",
]

[dependency-groups]
dev = [
    "ruff<1.0.0,>=0.4.4",
    "mypy<2.0.0,>=1.10.0",
    "types-gdb<13.0.0.0,>=12.1.4.20240408",
    "vermin<2.0.0,>=1.6.0",
    "pytest==8.2.0",
]

[tool.uv]
default-groups = []

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = [
    "A", # flake8-builtins
    "E", # pycodestyle
    "F", # pyflakes
    "W", # pycodestyle
    "C4", # flake8-comprehensions
    "I", # isort
    "SLOT", # flake8-slots
    "FLY", # flynt
    "PGH", # pygrep-hooks
    "RET506", # flake8-return: superfluous-else-raise
    "RET507", # flake8-return: superfluous-else-continue
    "RET508", # flake8-return: superfluous-else-break
    "UP" # pyupgrade
]
ignore = [
    "E402", # Module level import not at top of file
    "E501" # Line too long
]

[tool.ruff.lint.isort]
known-third-party = ["gdb", "prompt_toolkit"]
force-single-line = true

[tool.mypy]
files = ["gdbinit-gep.py", "example/geprc.py"]
strict_optional = false
check_untyped_defs = true
allow_redefinition = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
show_error_context = true
pretty = true
show_error_codes = true

disable_error_code = [
    # https://github.com/python/mypy/issues/6232
    "assignment"
]