[project]
name = "GEP"
version = "2025.06.01"
description = "GDB Enhanced Prompt"
readme = "README.md"
authors = [
    {name = "Alan Li", email = "61896187+lebr0nli@users.noreply.github.com"},
]
requires-python = "<4.0,>=3.10"
dependencies = [
    "prompt-toolkit==3.0.46",
]

[dependency-groups]
dev = [
    "ruff==0.8.6",
    "ty==0.0.8",
    "vermin==1.8.0",
    "pytest==8.2.0",
    "types-gdb>=16.3.0.20250920",
]

[tool.uv]
default-groups = []

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "A", # flake8-builtins
    "E", # pycodestyle
    "F", # pyflakes
    "W", # pycodestyle
    "C4", # flake8-comprehensions
    "I", # isort
    "SLOT", # flake8-slots
    "FLY", # flynt
    "PGH", # pygrep-hooks
    "RET506", # flake8-return: superfluous-else-raise
    "RET507", # flake8-return: superfluous-else-continue
    "RET508", # flake8-return: superfluous-else-break
    "UP" # pyupgrade
]
ignore = [
    "E402", # Module level import not at top of file
    "E501" # Line too long
]

[tool.ruff.lint.isort]
known-third-party = ["gdb", "prompt_toolkit"]
force-single-line = true

[tool.ty.src]
include = ["gdbinit-gep.py", "example/geprc.py"]

[tool.ty.rules]
redundant-cast = "warn"
unused-ignore-comment = "warn"
